# spalten-linalg-library

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Spalten.slnx
Spalten/: CMakeLists.txt  Spalten.vcxproj  Spalten.vcxproj.filters  main.cpp  matrix.h  utils.h
Spalten_Test/: Spalten_Test.vcxproj  main.cpp  test.cpp
include/Spalten/: Matrix.hpp  Utils.hpp  Vector.hpp
src/: CMakeLists.txt
tests/: CMakeLists.txt  main.cpp  test.cpp  test_matrix.cpp  test_vector.cpp
